--- a/student-home.html
+++ b/student-home.html
@@ -99,6 +99,9 @@
             <i class="fa fa-comments-o"></i>
 
             <h3 class="box-title">Chat</h3>
+            <div class="pull-right">
+              <i class="icon-collapse btnHideChatScreen"> Hide</i>
+            </div>
           </div>
           <div class="box-body chat" id="chatBox" style="overflow-y: auto; width: auto; height: 250px;">
           </div>
