--- a/student-home.html
+++ b/student-home.html
@@ -100,7 +100,7 @@
 
             <h3 class="box-title">Chat</h3>
             <div class="pull-right">
-              <i class="icon-collapse btnHideChatScreen"> Hide</i>
+              <i class="fa fa-eye-slash btnHideChatScreen"> Hide</i>
             </div>
           </div>
           <div class="box-body chat" id="chatBox" style="overflow-y: auto; width: auto; height: 250px;">
