--- a/faculty-home.html
+++ b/faculty-home.html
@@ -266,7 +266,8 @@
       </div>
       <div style="flex: 1; margin-top: 20px;">
         <a class="btnChat" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
-            class="fa fa-fw fa-wechat" style="font-size: 17px;"></i></a>
+            class="fa fa-fw fa-wechat" style="font-size: 17px;"></i>
+          <span class="label label-success newChatIndicator">&#10003;</span></a>
       </div>
     </div>
     <div class="facultyBtn"
