--- a/faculty-home.html
+++ b/faculty-home.html
@@ -265,9 +265,10 @@
             class="fa fa-fw fa-users" style="font-size: 17px;"></i></a>
       </div>
       <div style="flex: 1; margin-top: 20px;">
-        <a class="btnChat" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
-            class="fa fa-fw fa-wechat" style="font-size: 17px;"></i>
-          <span class="label label-success newChatIndicator">&#10003;</span></a>
+        <a class="btnChat" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;">
+          <i class="fa fa-fw fa-wechat" style="font-size: 17px;" aria-hidden="true"><span
+              class="label label-danger newChatIndicator" style="font-size: 4px;">✓</span></i>
+        </a>
       </div>
     </div>
     <div class="facultyBtn"
