--- a/faculty-home.html
+++ b/faculty-home.html
@@ -151,7 +151,7 @@
             </div>
           </div>
         </div>
-        <ul class="timeline timeline-inverse" id="ActivityList">
+        <ul class="timeline timeline-inverse" id="ActivityList" style="margin-left: 17px; margin-right: 25px;">
         </ul>
       </div>
 
