--- a/student-home.html
+++ b/student-home.html
@@ -124,7 +124,7 @@
         <div class="box-header with-border">
           <span>Activities</span>
         </div>
-        <ul class="timeline timeline-inverse" id="ActivityList">
+        <ul class="timeline timeline-inverse" id="ActivityList" style="margin-left: 17px; margin-right: 25px;">
         </ul>
       </div>
 
