--- a/faculty-home.html
+++ b/faculty-home.html
@@ -271,7 +271,7 @@
         </a>
       </div>
     </div>
-    <div class="facultyBtn"
+    <div class="leftSideBtn"
       style="display: flex; flex-direction: column; position: absolute; bottom: 97px; left: 7px; width:50px;">
       <div style="flex: 1;">
         <a class="btnUploadPDF" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
