--- a/student-home.html
+++ b/student-home.html
@@ -169,7 +169,7 @@
         </div>
       </div>
     </footer>
-    <div class="sideBtn"
+    <div class="rightSideBtn"
       style="display: flex; flex-direction: column; position: absolute; bottom: 97px; right: 7px; width:50px; border-radius: 30%;">
       <div style="flex: 1;">
         <a class="btnCall" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
@@ -212,6 +212,13 @@
           <i class="fa fa-fw fa-wechat" style="font-size: 17px;" aria-hidden="true"><span
               class="label label-danger newChatIndicator" style="font-size: 4px;">✓</span></i>
         </a>
+      </div>
+    </div>
+    <div class="leftSideBtn"
+      style="display: flex; flex-direction: column; position: absolute; bottom: 97px; left: 7px; width:50px;">
+      <div class="btnScreenSharing" style="flex: 1; margin-top: 20px;">
+        <a class="btnScreenSharing" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
+            class="fa fa-share-square-o" style="font-size: 17px;"></i></a>
       </div>
     </div>
   </div>
