--- a/faculty-home.html
+++ b/faculty-home.html
@@ -273,17 +273,17 @@
     </div>
     <div class="leftSideBtn"
       style="display: flex; flex-direction: column; position: absolute; bottom: 97px; left: 7px; width:50px;">
-      <div style="flex: 1;" class="btnUploadPDF">
-        <a style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i class="fas fa-file-pdf"
-            style="font-size: 17px;"></i></a>
+      <div style="flex: 1;">
+        <a class="btnUploadPDF" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
+            class="fas fa-file-pdf" style="font-size: 17px;"></i></a>
       </div>
-      <div class="btnStartWebinar" style="flex: 1; margin-top: 20px;">
-        <a style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i class="fa fa-podcast"
-            style="font-size: 17px;"></i></a>
+      <div style="flex: 1; margin-top: 20px;">
+        <a class="btnStartWebinar" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
+            class="fa fa-podcast" style="font-size: 17px;"></i></a>
       </div>
-      <div class="btnScreenSharing" style="flex: 1; margin-top: 20px;">
-        <a style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i class="fa fa-share-square-o"
-            style="font-size: 17px;"></i></a>
+      <div style="flex: 1; margin-top: 20px;">
+        <a class="btnScreenSharing" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
+            class="fa fa-share-square-o" style="font-size: 17px;"></i></a>
       </div>
     </div>
   </div>
