--- a/faculty-home.html
+++ b/faculty-home.html
@@ -178,7 +178,7 @@
         <iframe id="dailyReadingPDF" src="" title="Daily Reading" style="width: 100%; height: 100vh;"></iframe>
       </div>
 
-      <div id="studentList" style="display: none; background-color: white;">
+      <div id="studentList" style="display: none; background-color: white; margin-left: 17px; margin-right: 25px;">
         <div class="box-header with-border">
           <span>List of Students</span>
         </div>
