--- a/student-home.html
+++ b/student-home.html
@@ -147,11 +147,11 @@
         </div>
       </div>
 
-      <div id="dailyRead" style="display: none; background-color: white;">
+      <div id="dailyRead" style="display: none; background-color: white; margin-top:47px;">
         <iframe id="dailyReadingPDF" src="" title="Daily Reading" style="width: 100%; height: 100vh;"></iframe>
       </div>
 
-      <div id="studentList" style="display: none; background-color: white;">
+      <div id="studentList" style="display: none; background-color: white; margin-left: 37px; margin-right: 25px;">
         <div class="box-header with-border">
           <span>List of Students</span>
         </div>
