--- a/faculty-home.html
+++ b/faculty-home.html
@@ -248,10 +248,10 @@
         <a class="btnMute" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
             class="fas fa-microphone-slash" style="color: #b43434; font-size: 17px;"></i></a>
       </div>
-      <div class="btnFullScreen" style="flex: 1; margin-top: 20px; display: none;">
+      <!-- <div class="btnFullScreen" style="flex: 1; margin-top: 20px; display: none;">
         <a class="btnFullScreen" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
             class="fa fa-fw fa-arrows-alt" style="font-size: 17px;"></i></a>
-      </div>
+      </div> -->
       <div style="flex: 1; margin-top: 20px;">
         <a class="btnActivities" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
             class="fa fa-fw fa-pencil" style="font-size: 17px;"></i></a>
