--- a/faculty-home.html
+++ b/faculty-home.html
@@ -49,7 +49,7 @@
     <header>
       <div style="flex: 1; margin-top: 0px; color: white; background: #3a7cbd; height: 34px; padding-top: 7px;"
         class="text-center">Virtual School</div>
-      <div id="welcome" style="display: none; margin-top: -28px; margin-left: 10px; margin-right: 10px;">
+      <div id="welcome" style="display: none;">
         <span id="myProfileName" style="color: white;">Please login</span>
         <div style="color: #cc5a62;" class="btnLogout pull-right"><i class="fa fa-fw fa-sign-out"></i></div>
       </div>
