--- a/faculty-home.html
+++ b/faculty-home.html
@@ -238,7 +238,7 @@
         <a class="btnFacultyAndStudents" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
             class="fa fa-fw fa-users" style="font-size: 17px;"></i></a>
       </div>
-      <div style="flex: 1; margin-top: 20px;">
+      <div class="btnChat" style="flex: 1; margin-top: 20px; display: none;">
         <a class="btnChat" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;">
           <i class="fa fa-fw fa-wechat" style="font-size: 17px;" aria-hidden="true"><span
               class="label label-danger newChatIndicator" style="font-size: 4px;">✓</span></i>
