--- a/login.html
+++ b/login.html
@@ -95,7 +95,7 @@
         $(function () {
             if (storage.getToken()) {
                 loginJS.redirectHome();
-                // window.location.href = "home.html";
+                window.location.href = "home.html";
             }
             else {
                 storage.clear();
