--- a/home.html
+++ b/home.html
@@ -446,6 +446,7 @@
   <!--Using SocketIO-->
   <script src="js/meetingroom/socketioMeetingRoom.js"></script>
   <script src="js/meetingroom/socketioMessageHandler.js"></script>
+  <script src="js/meetingroom/myP2P.js"></script>
   <script src="js/meetingroom/socketioP2P.js"></script>
   <script src="js/meetingroom/socketioMediaStream.js"></script>
 
