--- a/home.html
+++ b/home.html
@@ -75,101 +75,15 @@
                 <i style="color: aliceblue;">Loading</i> <img src="images/ajax-loader.gif" />
               </div>
             </li>
-            <li class="dropdown company company-menu" style="display: none;">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" id="useCompany">
-                <span style="padding-right: 15px;"></span><i class="fa fa-bank"></i>
-              </a>
-              <ul class="dropdown-menu sidebar-menu tree" data-widget="tree" style="max-height:700px; overflow-y:auto;">
-                <li><a href="#" class="leftMenuItem manageEmployee"><i class="fa fa-dashboard"></i> <span>Manage
-                      Employee</span></a></li>
-                <li><a href="#" class="leftMenuItem manageUserRoles"><i class="fa fa-dashboard"></i> <span>Manage User
-                      Roles</span></a></li>
-                <li><a href="#" class="leftMenuItem manageDepartment"><i class="fa fa-dashboard"></i> <span>Manage
-                      Department</span></a></li>
-                <li><a href="#" class="leftMenuItem manageTaxCategory"><i class="fa fa-dashboard"></i> <span>Manage Tax
-                      Category</span></a></li>
-                <li><a href="#" class="leftMenuItem manageAccountChart"><i class="fa fa-dashboard"></i> <span>Manage
-                      Account Chart</span></a></li>
-                <li><a href="#" class="leftMenuItem manageProduct"><i class="fa fa-dashboard"></i> <span>Manage
-                      Product</span></a></li>
-                <li><a href="#" class="leftMenuItem manageBenefit"><i class="fa fa-dashboard"></i> <span>Manage
-                      Benefit</span></a></li>
-                <li><a href="#" class="leftMenuItem manageSupplier"><i class="fa fa-dashboard"></i> <span>Manage
-                      Supplier</span></a></li>
-              </ul>
-            </li>
-            <li class="dropdown messages-menu" style="display: none;">
-              <a href="#" class="pivotTable">
-                <i class="fa fa-bar-chart"></i>
-              </a>
-            </li>
-            <li class="dropdown messages-menu" style="display: none;">
-              <a href="#" class="myReportViewer">
-                <i class="fa fa-file-text"></i>
-              </a>
-            </li>
-            <li class="dropdown messages-menu" style="display: none;">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" id="uploadDataFile">
-                <i class="fa fa-upload"></i>
-              </a>
-            </li>
-            <li class="dropdown messages-menu quickCall">
-              <div class="input-group margin" style="width: 250px;  margin-top: 5px; margin-right: 15px;">
-                <div class="input-group" style="width: 100%;">
-                  <input rowindex="0" type="text" class="form-control autocomplete" name="quickCallByCode"
-                    placeholder="Type user here" module="QuickCallUI" autoname="quickCallByCode"
-                    helptitle="quickCallByCode" style="border-radius: 10px 0px 0px 10px;">
-                  <span class="input-group-btn">
-                    <button type="button" id="btnQuickCall" class="btn btn-info btn-flat"
-                      style="border-radius: 0px 10px 10px 0px;">
-                      <i class="fa fa-phone"></i><span style="padding-left: 5px;">Call</span>
-                    </button>
-                  </span>
-                  </input>
-                  <input rowindex="0" id="quickCallCode" class="form-control editRecord HiddenAutoComplete"
-                    name="quickCallByCode" type="hidden" module="QuickCallUI" autonamefield="quickCallByCode" value="">
-                  <div class="autocomplete-items" rowindex="0" module="QuickCallUI" autoname="quickCallByCode"></div>
-                </div>
-              </div>
-            </li>
-            <li class="dropdown messages-menu myMeetingButtonGroup">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                <i class="fa fa-users"></i><span style="padding-left: 5px;">Video Con</span>
-              </a>
-              <ul class="dropdown-menu sidebar-menu tree" data-widget="tree" id="myMeetings"
-                style="max-height:700px; overflow-y:auto;">
-              </ul>
-            </li>
-            <!-- User Account: style can be found in dropdown.less -->
             <li class="dropdown user user-menu">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 <!-- <img src="dist/img/user2-160x160.jpg" class="user-image profilePicture" alt="User Image"> -->
                 Welcome <span class="hidden-xs profileName" style="font-weight: bold;">User</span>
               </a>
-              <ul class="dropdown-menu">
-                <!-- User image -->
-                <!-- <li class="user-header">
-                  <img src="dist/img/user2-160x160.jpg" class="img-circle profilePicture" alt="User Image">
-                  <p>
-                    <span class="profileName">User</span> - <span class="profileWork">User</span>
-                  </p>
-                </li> -->
-                <!-- Menu Body -->
-                <!-- Menu Footer-->
-                <li class="user-footer">
-                  <!-- <div class="pull-left">
-                    <a href="#" class="btn btn-default btn-flat">Profile</a>
-                  </div> -->
-                  <div class="text-center">
-                    <a href="#" class="btn btn-default btn-flat btnProfile">Profile</a>
-                    <a href="#" class="btn btn-default btn-flat btnSignOut">Sign out</a>
-                  </div>
-                </li>
-              </ul>
             </li>
-            <!-- Control Sidebar Toggle Button -->
-            <li style="display: none;">
-              <a href="#" data-toggle="control-sidebar"><i class="fa fa-gears"></i></a>
+            <li class="dropdown user user-menu">
+              <div style="color: #cc5a62; margin-top: 15px; margin-right: 20px; margin-left: 20px;"
+                class="btnSignOut pull-right"><i class="fa fa-fw fa-sign-out"></i></div>
             </li>
           </ul>
         </div>
@@ -515,6 +429,7 @@
   <script src="js/modules/AllNotificationUI.js"></script>
   <script src="js/modules/FacultyDashboardUI.js"></script>
   <script src="js/modules/StudentDashboardUI.js"></script>
+  <script src="js/modules/SchoolMonitoringUI.js"></script>
 
   <script src="js/meetingui/GenericMeetingUI.js"></script>
   <script src="js/meetingui/FacultyMeetingUI.js"></script>
