--- a/displaytabs/SchoolCashierUI-MainTemplate.html
+++ b/displaytabs/SchoolCashierUI-MainTemplate.html
@@ -12,24 +12,27 @@
                     <li class="tab-pane active">
                         <a href="#Cashier" data-toggle="tab" aria-expanded="true">Cashier</a>
                     </li>
-                    <li class="tab-pane">
+                    <li class="tab-pane" style="display: none;">
                         <a href="#Reports" data-toggle="tab" aria-expanded="false">Reports</a>
                     </li>
                 </ul>
-                <div class="tab-content no-padding"> 
+                <div class="tab-content no-padding">
                     <div class="tab-pane active" id="Cashier">
                         <div style="display: flex; background: #ecf0f5;">
                             <div style="flex: 75%; margin: 15px 0px;">
-                                <div class="DisplayTabCommon" tabName="GovernmentCashier" tabUrl="GovernmentCashierProfile"></div>
+                                <div class="DisplayTabCommon" tabName="GovernmentCashier"
+                                    tabUrl="GovernmentCashierProfile"></div>
                             </div>
                             <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTabCommon" tabName="GovernmentCashier" tabUrl="SearchGovernmentCashier"></div>
+                                <div class="DisplayTabCommon" tabName="GovernmentCashier"
+                                    tabUrl="SearchGovernmentCashier"></div>
                             </div>
                         </div>
                     </div>
                     <div class="tab-pane" id="Reports">
                         <div style="display: flex; background: #ecf0f5;">
-                            <div class="DisplayTab" tabName="SchoolCashier" module2="SchoolUI" tabUrl="SchoolReport"></div>
+                            <div class="DisplayTab" tabName="SchoolCashier" module2="SchoolUI" tabUrl="SchoolReport">
+                            </div>
                         </div>
                     </div>
                 </div>
