--- a/displaytabs/tabs/SchoolUI/AdmissionSearch.html
+++ b/displaytabs/tabs/SchoolUI/AdmissionSearch.html
@@ -4,17 +4,20 @@
     <div class="box-header ui-sortable-handle">
         <i class="fa fa-users"></i>
         <h3 class="box-title">Search</h3>
-        <div class="box-tools pull-right" data-toggle="tooltip" title="" data-original-title="Status">
+        <div class="box-tools pull-right" data-toggle="tooltip" title="" data-original-title="Status"
+            style="display: none;">
             <div style="display: flex;">
-                <div style="display: flex; margin-top: 5px; margin-left: 10px;" class="hand btnRecordDownloadCSV" module="AdmissionUI">
+                <div style="display: flex; margin-top: 5px; margin-left: 10px;" class="hand btnRecordDownloadCSV"
+                    module="AdmissionUI">
                     <i class="fa fa-fw fa-download" style="margin-top: 5px;"></i> <i>CSV</i>
                 </div>
             </div>
         </div>
     </div>
-    <div class="box-body"> 
+    <div class="box-body">
         <div class="form-group">
-            <input type="text" class="form-control searchFilter" module="AdmissionUI" tabName="_TABNAME_" name="mainFilter" placeholder="Search Banking" rowIndex="0">
+            <input type="text" class="form-control searchFilter" module="AdmissionUI" tabName="_TABNAME_"
+                name="mainFilter" placeholder="Search Banking" rowIndex="0">
         </div>
     </div>
 
