Working Faculty UI

--- a/home.html
+++ b/home.html
@@ -402,6 +402,9 @@
   <script src="js/modules/submodules/EnrollmentUI.js"></script>
   <script src="js/modules/submodules/SchoolCashierUI.js"></script>
   <script src="js/modules/submodules/NotificationUI.js"></script>
+  <script src="js/modules/submodules/FacultyUI.js"></script>
+  <script src="js/modules/submodules/StudentUI.js"></script>
+  <script src="js/modules/submodules/SchoolScheduleUI.js"></script>
 
   <script src="js/modules/FacultyScheduleUI.js"></script>
   <script src="js/modules/StudentScheduleUI.js"></script>
