--- a/displaytabs/tabs/SchoolUI/StudentProfileMain.html
+++ b/displaytabs/tabs/SchoolUI/StudentProfileMain.html
@@ -1,48 +1,48 @@
 <div style="display: flex; flex: 100%; flex-wrap: wrap;">
-    <input rowIndex="0" type="hidden" class="form-control editRecord mainRecordId" module="FacultyUI"
+    <input rowIndex="0" type="hidden" class="form-control editRecord mainRecordId" module="StudentUI"
         name="NotificationId">
-    <input rowIndex="0" type="hidden" class="form-control editRecord" module="FacultyUI" name="code">
+    <input rowIndex="0" type="hidden" class="form-control editRecord" module="StudentUI" name="code">
 
     <div class="form-group" style="flex: 3; margin-left: 15px;">
         <label>Last Name</label>
-        <input type="text" rowIndex="0" class="form-control editRecord" module="FacultyUI" name="lastName"
+        <input type="text" rowIndex="0" class="form-control editRecord" module="StudentUI" name="lastName"
             tabName="_TABNAME_">
     </div>
     <div class="form-group" style="flex: 3; margin-left: 15px;">
         <label>First Name</label>
-        <input type="text" rowIndex="0" class="form-control editRecord" module="FacultyUI" name="firstName"
+        <input type="text" rowIndex="0" class="form-control editRecord" module="StudentUI" name="firstName"
             tabName="_TABNAME_">
     </div>
     <div class="form-group" style="flex: 1; margin-left: 15px;">
         <label>M. I.</label>
-        <input type="text" rowIndex="0" class="form-control editRecord" module="FacultyUI" name="middleInitial"
+        <input type="text" rowIndex="0" class="form-control editRecord" module="StudentUI" name="middleInitial"
             tabName="_TABNAME_">
     </div>
     <div class="flex-break"></div>
     <div class="form-group" style="flex: 1; margin-left: 15px;">
         <label>Gender</label>
-        <input type="text" rowIndex="0" class="form-control editRecord" module="FacultyUI" name="gender"
+        <input type="text" rowIndex="0" class="form-control editRecord" module="StudentUI" name="gender"
             tabName="_TABNAME_">
     </div>
     <div class="form-group" style="flex: 2; margin-left: 15px;">
         <label>Religion</label>
-        <input type="text" rowIndex="0" class="form-control editRecord" module="FacultyUI" name="religion"
+        <input type="text" rowIndex="0" class="form-control editRecord" module="StudentUI" name="religion"
             tabName="_TABNAME_">
     </div>
     <div class="form-group" style="flex: 3; margin-left: 15px;">
         <label>Email</label>
-        <input type="text" rowIndex="0" class="form-control editRecord" module="FacultyUI" name="email"
+        <input type="text" rowIndex="0" class="form-control editRecord" module="StudentUI" name="email"
             tabName="_TABNAME_">
     </div>
     <div class="flex-break"></div>
     <div class="form-group" style="flex: 2; margin-left: 15px;">
         <label>Phone</label>
-        <input type="text" rowIndex="0" class="form-control editRecord" module="FacultyUI" name="telNum"
+        <input type="text" rowIndex="0" class="form-control editRecord" module="StudentUI" name="telNum"
             tabName="_TABNAME_">
     </div>
     <div class="form-group" style="flex: 1; margin-left: 15px;">
         <label>Birth Date</label>
-        <input type="text" rowIndex="0" class="form-control editRecord calendar" module="FacultyUI" name="birthDate"
+        <input type="text" rowIndex="0" class="form-control editRecord calendar" module="StudentUI" name="birthDate"
             tabName="_TABNAME_">
     </div>
 </div>
