--- a/displaytabs/tabs/SchoolUI/EnrollmentProfileMain.html
+++ b/displaytabs/tabs/SchoolUI/EnrollmentProfileMain.html
@@ -1,6 +1,5 @@
 <div style="display: flex; flex: 100%; flex-wrap: wrap;">
-    <input rowIndex="0" type="hidden" class="form-control editRecord mainRecordId" module="EnrollmentUI"
-        name="AdmissionId">
+    <input rowIndex="0" type="hidden" class="form-control editRecord mainRecordId" module="EnrollmentUI" name="id">
     <input rowIndex="0" type="hidden" class="form-control editRecord" module="EnrollmentUI" name="code">
 
     <div class="form-group" style="flex: 3; margin-left: 15px;">
